Lost view Controller update

--- a/FoundIt/Base.lproj/Main.storyboard
+++ b/FoundIt/Base.lproj/Main.storyboard
@@ -183,6 +183,42 @@
             </objects>
             <point key="canvasLocation" x="1816" y="-175"/>
         </scene>
+        <!--Picker View Controller-->
+        <scene sceneID="dJo-Q7-8bl">
+            <objects>
+                <tableViewController id="0yC-vM-QuQ" customClass="PickerViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="vGn-4y-s7p">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="B28-iJ-GtZ">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="B28-iJ-GtZ" id="oTD-pV-bQQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3X6-In-HQI">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3X6-In-HQI" id="Xl2-DD-q7Y">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="0yC-vM-QuQ" id="h0A-LO-Y7t"/>
+                            <outlet property="delegate" destination="0yC-vM-QuQ" id="b9r-E0-w6Z"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yZ8-x9-9Rl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2462" y="-887"/>
+        </scene>
         <!--Item View Controller - Item Type-->
         <scene sceneID="PFj-fe-mb3">
             <objects>
@@ -213,7 +249,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RYW-WW-0nJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2484" y="-214"/>
+            <point key="canvasLocation" x="2472" y="-175"/>
         </scene>
         <!--Navigation Controller - home-->
         <scene sceneID="KR7-9b-exH">
@@ -319,7 +355,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VZs-dm-V4v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1268" y="591"/>
+            <point key="canvasLocation" x="1248" y="591"/>
         </scene>
         <!--Lost View Controller - Found-->
         <scene sceneID="tUm-5I-eme">
@@ -538,7 +574,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="py0-ym-KJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2472" y="511"/>
+            <point key="canvasLocation" x="2472" y="591"/>
         </scene>
     </scenes>
     <resources>
@@ -551,7 +587,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="b1M-HO-xAA"/>
-        <segue reference="E01-gi-rUf"/>
+        <segue reference="8uL-2s-dd7"/>
+        <segue reference="ulB-9R-kuZ"/>
     </inferredMetricsTieBreakers>
 </document>
